service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-showcase-service
  namespace: production
  labels:
    app: devops-showcase-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: devops-showcase-app
